--- a/paint.html
+++ b/paint.html
@@ -97,7 +97,7 @@
   <main>
     <section class="section-hero" id="section-hero">
       <div class="protication">
-        <img src=".//img/paint/paint-main.jpg" alt="protication">
+        <img src=".//img/paint/paint-main.png" alt="protication">
         <div class="container">
           <div class="protication-text">
             <h1> اعد لسيارتك بريقها من جديد صبغ احترافي وجودة مضمونة مع هافركامب </h1>
@@ -113,7 +113,7 @@
       </div>
       <div class="container">
         <div class="box">
-          <div class="img"><img src="./img/paint/check.webp" alt=""></div>
+          <div class="img"><img src="./img/paint/check.png" alt="فحص اجزاء الصبغ المتضررة لعمل صبغ جديد "></div>
           <div class="box-text">
             <h3> فحص السيارة</h3>
             <p>
@@ -121,7 +121,7 @@
           </div>
         </div>
         <div class="box">
-          <div class="img"><img src="./img/paint/cover.jpg" alt=""></div>
+          <div class="img"><img src="./img/paint/cover.png" alt="تغطية الاجزاء البلاستيكية لعمل الصبغ"></div>
           <div class="box-text">
             <h3> حماية بدي السيارة </h3>
             <p>
@@ -130,7 +130,8 @@
           </div>
         </div>
         <div class="box">
-          <div class="img"><img src="./img/paint/Sandpapering.jpg" alt=""></div>
+          <div class="img"><img src="./img/paint/Sandpapering.png"
+              alt="ارالة الصبغ القديم لتركيب الصبغ الجديد مع شركة هافركامب"></div>
           <div class="box-text">
             <h3> الصنفرة</h3>
             <p>
@@ -140,7 +141,7 @@
           </div>
         </div>
         <div class="box">
-          <div class="img"><img src="./img/paint/mix.jpg" alt=""></div>
+          <div class="img"><img src="./img/paint/mix.png" alt="خلط الالوان لعمل نفس الصبغ شركة هافركامب"></div>
           <div class="box-text">
             <h3> خلط لون الصبغ </h3>
             <p>
@@ -149,7 +150,7 @@
           </div>
         </div>
         <div class="box">
-          <div class="img"><img src="./img/paint/painting.jpg" alt=""></div>
+          <div class="img"><img src="./img/paint/painting.png" alt="افضل خدمة صبغ سيارات بالكويت شركة هافركامب"></div>
           <div class="box-text">
             <h3> الصبغ </h3>
             <p>
@@ -166,7 +167,8 @@
           لماذا تختار هافركامب </h2>
       </div>
       <div class="container">
-        <div class="img"><img src="./img/main_page/haverkamp.png" alt=""></div>
+        <div class="img"><img src="./img/main_page/haverkamp.png" alt="افضل خدمة صبغ سيارات بالكويت مع شركة هافركامب">
+        </div>
         <ul class="about-list">
           <li><i class="fa-solid fa-fill-drip"></i> جودة دهان فائقة باستخدام مواد معتمدة.</li>
           <li>
@@ -190,22 +192,22 @@
       <div class="carosel">
         <div class=" list">
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-1.png" alt="football">
+            <img src="./img/gallery/paint/paint-1.png" alt="افضل خدمة صبغ سيارات بالكويت">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-2.png" alt=" handball ">
+            <img src="./img/gallery/paint/paint-2.png" alt=" صبغ سيارات بمواد المانية شركة هافركامب ">
           </div>
           <div class="item">
-            <img src="../img/gallery/main/ppf-gal-3.png" alt="basketball">
+            <img src="../img/gallery/paint/paint-3.png" alt="اجود انواع صبغ السيارات بالكويت">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-4.png" alt="volleyball">
+            <img src="./img/gallery/paint/paint-4.png" alt="شركة هافركامب توفر افضل انواع صبغ السيارات بالكويت">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-5.png" alt="tennis">
+            <img src="./img/gallery/paint/paint-5.png" alt="صبغ سيارات بالكويت شركة هافركامب">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-6.png" alt="swimming">
+            <img src="./img/gallery/paint/paint-6.png" alt="اصبغ سيارتك مع شركة هافركامب">
           </div>
 
         </div>
@@ -236,8 +238,8 @@
       <div class="container">
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>عمر السعدون</h3>
-          <span class="title">تويوتا لاندكروزر</span>
+          <h3> خلف العنزي</h3>
+          <span class="title"> نيسان باترول</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -245,12 +247,13 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>مشكورين الاخ بيتر ومبارك خدمة ممتازة و سعر يستحق الخدمة المقدمة</p>
+          <p> تجربة مميزة بكل المقاييس جودة الصبغ عالية واللون مطابق تماما لما تم الاتفاق عليه مع عناية واضحة بأدق
+            التفاصيل</p>
         </div>
         <div class="box">
           <img src="./img/testimonials/female-3.png" alt="avatar-1" />
-          <h3>لطيقة الياسين</h3>
-          <span class="title">رانج روفر</span>
+          <h3> منيرة الحردان</h3>
+          <span class="title"> انفنتي</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -258,12 +261,12 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>صراحة اول مرة اجرب شغلكم وباذن الله راح اقترح اسم محلكم لاهلنا</p>
+          <p> تعاملهم راقـي وشغلهم دقيق، سلموني السيارة بالوقت المتفق عليه بدون تاخير</p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-2.png" alt="avatar-1" />
-          <h3>خالد الفيلكاوي</h3>
-          <span class="title">بي ام دابليو</span>
+          <h3> مشعل المطيري</h3>
+          <span class="title"> لكزس</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -271,12 +274,12 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>يعطيكم العافية شغل مميز والله يبارك لكم فى حلالكم</p>
+          <p> أنصح بالخدمة دقة في الأداءالتزام بالمواعيد ونتيجة تعكس احترافية حقيقية في صبغ السيارات</p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>ابراهيم القحطاني</h3>
-          <span class="title">لكزيس</span>
+          <h3> علي البلوشي</h3>
+          <span class="title">جي ام سي يوكن</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -285,13 +288,12 @@
             <i class="filled fas fa-star"></i>
           </div>
           <p>
-            شكرا على حسن التعامل والاستقبال الطيب المكان حيل مرتب مو اول سيارة
-            اعملها عندكم باذن الله اصير زبون دائم
+            شفريق عمل محترف شرح واضح قبل البدء والتزام كامل بالمواصفات المتفق عليها دون أي ملاحظات
           </p>
         </div>
         <div class="box">
           <img src="./img/testimonials/female-3.png" alt="avatar-1" />
-          <h3>مريم الانبعي</h3>
+          <h3>معالي المطيري</h3>
           <span class="title">جيلى مانجارو</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
@@ -300,12 +302,12 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>الحلو ان المحل كبير وفية استراحة منفصلة للعوائل</p>
+          <p>شغل مرتب وممتاز والحلو ان المحل كبير وفية استراحة منفصلة للعوائل</p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>اسامة العميري</h3>
-          <span class="title">دودج رام تي ار اكس</span>
+          <h3> خالد العجمي</h3>
+          <span class="title">بوشه كايين</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -314,14 +316,13 @@
             <i class="filled fas fa-star"></i>
           </div>
           <p>
-            قسم الاكسسوارات ممتاز واشتريت شاحن التليفون و دقمة حزام الامان
-            واشتراك للسيارة
+            اهتمام واضح بالجودة استخدام مواد صبغ ممتازة مع عزل دقيق وحماية كاملة لأجزاء السيارة
           </p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>ناصر المطيري</h3>
-          <span class="title">جينيسيس</span>
+          <h3> عبدالرحمن السلم</h3>
+          <span class="title">اسكاليد</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -329,11 +330,11 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>يا ليت لو تفتحتون فرع فى المنطقة العاشرة</p>
+          <p>صبغ احترافي وما في أي تموجات أو اختلاف لون، واضح إنهم فاهمين شغلهم عدل</p>
         </div>
         <div class="box">
           <img src="./img/testimonials/female-3.png" alt="avatar-1" />
-          <h3>مني الدويسان</h3>
+          <h3> روان حسين</h3>
           <span class="title">ديفندر</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
@@ -343,14 +344,13 @@
             <i class="filled fas fa-star"></i>
           </div>
           <p>
-            يعطيكم العافية شغل ممتاز <br />استقبال وتعامل راقي الله يباركلك فى
-            حلالكم
+            سعرهم مناسب وجودة الشغل ممتازة والأهم الصدق في التعامل
           </p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-2.png" alt="avatar-1" />
-          <h3>فهد السهلي</h3>
-          <span class="title">مرسيدس</span>
+          <h3> احمد العدواني</h3>
+          <span class="title">لاندكروزر</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -359,8 +359,7 @@
             <i class="filled fas fa-star"></i>
           </div>
           <p>
-            سويت حماية مطفية لسياراتي شغل ممتاز واسعار جيدة بالنسبة لباقى
-            الشركات مشكورين على التعامل الراقي وحسن الاستقبال
+            جربت ورش قبل بس هالمكان غير جودة عالية واهتمام بالتفاصيل
           </p>
         </div>
       </div>
@@ -386,83 +385,67 @@
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      <span class="accordian-numbers">01</span> ما هو سمك الحماية
+                      <span class="accordian-numbers">01</span>كم يوم تحتاج السيارة لعمل الصبغ ؟
                     </button>
                   </h2>
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      سمك الحماية 9 ميكروميلى
-                    </div>
+                      تختلف المدة من سيارة الي اخري حسب الاجزاء التي تحتاج الي صبغ </div>
                   </div>
                 </div>
                 <div class="accordion-item mb-4">
                   <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      <span class="accordian-numbers">02</span> مدة الكفالة
+                      <span class="accordian-numbers">02</span>ماهي المواد المستخدمة لديكم ؟
                     </button>
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      10 سنوات علي عيوب التركيب
-                    </div>
+                      نقوم باستخدام صبغ جلاسو هو منتج الماني 100٪ </div>
                   </div>
                 </div>
                 <div class="accordion-item mb-4">
                   <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      <span class="accordian-numbers">03</span> طريقة التركيب
+                      <span class="accordian-numbers">03</span> هل الصبغ الكامل أفضل أم الجزئي؟
                     </button>
                   </h2>
                   <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      قص احترافي وقطع كاملة بدون وصلات وتركيب داخلي
-                    </div>
+                      يعتمد على حالة السيارة. الصبغ الجزئي مناسب للأضرار المحدودة، أما الصبغ الكامل فيُفضل عند تلف
+                      الطلاء بشكل واسع أو لتوحيد
+                      اللون أو تغييره. </div>
                   </div>
                 </div>
                 <div class="accordion-item mb-4">
                   <h2 class="accordion-header" id="headingFour">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                      <span class="accordian-numbers">04</span> المعالجة الذاتية
+                      <span class="accordian-numbers">04</span> هل استطيع تغير لون السيارة بالكامل ؟
                     </button>
                   </h2>
                   <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      تحتوي الحماية علي خاصية المعالجة الذاتية عن طريق تعريضها الي الحرارة
-                    </div>
+                      نعم تسطيع تغير لون سيارتك بالكامل بعد اخد الموافقة من الادارة العامة للمرور </div>
                   </div>
                 </div>
                 <div class="accordion-item mb-4">
                   <h2 class="accordion-header" id="headingFive">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                      <span class="accordian-numbers">05</span> نسبة اللمعة الاضافية
+                      <span class="accordian-numbers">05</span> ما هي تكلفة الصبغ لديكم ؟
                     </button>
                   </h2>
                   <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      تصل اللمعة الاضافيةالي 70٪
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item mb-4">
-                  <h2 class="accordion-header" id="headingSix">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                      <span class="accordian-numbers">06</span> هل يوجد سيرفس دوري
-                    </button>
-                  </h2>
-                  <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      نعم يوجد سيرفس دوري لفحص الحماية كل 6 اشهور مجانا
+                      التكلفة تختلف من سيارة الي اخري وتحدد بناء علي الخدمة المقدمة هل هي صبغ اجزاء ام صبغ كامل
                     </div>
                   </div>
                 </div>
@@ -506,7 +489,7 @@
               <button class="btn btn--form">ارسل الان </button>
             </form>
           </div>
-          <div class="cta-img-box" role="img" aria-label="child win"></div>
+          <div class="cta-img-box cta-img-box-paint" role="img" aria-label="child win"></div>
         </div>
       </div>
     </section>
