--- a/polish.html
+++ b/polish.html
@@ -233,8 +233,8 @@
       <div class="container">
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>عمر السعدون</h3>
-          <span class="title">تويوتا لاندكروزر</span>
+          <h3> أبو ناصر العجمي</h3>
+          <span class="title"> تويوتا كامري</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -242,25 +242,13 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>مشكورين الاخ بيتر ومبارك خدمة ممتازة و سعر يستحق الخدمة المقدمة</p>
-        </div>
-        <div class="box">
-          <img src="./img/testimonials/female-3.png" alt="avatar-1" />
-          <h3>لطيقة الياسين</h3>
-          <span class="title">رانج روفر</span>
-          <div class="rate">
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-          </div>
-          <p>صراحة اول مرة اجرب شغلكم وباذن الله راح اقترح اسم محلكم لاهلنا</p>
+          <p>خدمة بوليش احترافية أعادت لسيارتي لمعانها الأصلي. الاهتمام بالتفاصيل واضح، والنتيجة فاقت توقعاتي من أول
+            مرة</p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-2.png" alt="avatar-1" />
-          <h3>خالد الفيلكاوي</h3>
-          <span class="title">بي ام دابليو</span>
+          <h3> بندر الشمري</h3>
+          <span class="title"> مرسيدس </span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -268,12 +256,12 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>يعطيكم العافية شغل مميز والله يبارك لكم فى حلالكم</p>
+          <p> السيارة بعد البوليش بدت كأنها جديدة تمامًا. إزالة الخدوش الخفيفة تمت بدقة عالية، والعمل منظم واحترافي</p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>ابراهيم القحطاني</h3>
-          <span class="title">لكزيس</span>
+          <h3> عبدالعزيز الهاجري</h3>
+          <span class="title">باترول</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -282,27 +270,12 @@
             <i class="filled fas fa-star"></i>
           </div>
           <p>
-            شكرا على حسن التعامل والاستقبال الطيب المكان حيل مرتب مو اول سيارة
-            اعملها عندكم باذن الله اصير زبون دائم
-          </p>
-        </div>
-        <div class="box">
-          <img src="./img/testimonials/female-3.png" alt="avatar-1" />
-          <h3>مريم الانبعي</h3>
-          <span class="title">جيلى مانجارو</span>
-          <div class="rate">
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-          </div>
-          <p>الحلو ان المحل كبير وفية استراحة منفصلة للعوائل</p>
+            تعامل راقٍ وجودة ممتازة في التنفيذ. استخدموا مواد واضحة الجودة، والفرق قبل وبعد ملحوظ جدًا </p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>اسامة العميري</h3>
-          <span class="title">دودج رام تي ار اكس</span>
+          <h3> محمد العنزي</h3>
+          <span class="title"> وانيت سيرا</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -311,14 +284,12 @@
             <i class="filled fas fa-star"></i>
           </div>
           <p>
-            قسم الاكسسوارات ممتاز واشتريت شاحن التليفون و دقمة حزام الامان
-            واشتراك للسيارة
-          </p>
+            الدقة في العمل والالتزام بالوقت من أبرز ما يميزهم. أنصح بالخدمة لكل من يهتم بمظهر سيارته </p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>ناصر المطيري</h3>
-          <span class="title">جينيسيس</span>
+          <h3> علي بوجبارة</h3>
+          <span class="title">تاهو</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -326,28 +297,13 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>يا ليت لو تفتحتون فرع فى المنطقة العاشرة</p>
-        </div>
-        <div class="box">
-          <img src="./img/testimonials/female-3.png" alt="avatar-1" />
-          <h3>مني الدويسان</h3>
-          <span class="title">ديفندر</span>
-          <div class="rate">
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-            <i class="filled fas fa-star"></i>
-          </div>
-          <p>
-            يعطيكم العافية شغل ممتاز <br />استقبال وتعامل راقي الله يباركلك فى
-            حلالكم
-          </p>
+          <p> خدمة البوليش كانت على مستوى عالٍ من الاحترافية، أعادت لمعان السيارة وكأنها جديدة تمامًا، مع اهتمام واضح
+            بأدق التفاصيل</p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-2.png" alt="avatar-1" />
-          <h3>فهد السهلي</h3>
-          <span class="title">مرسيدس</span>
+          <h3> علي العنزي</h3>
+          <span class="title">جاكوار</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -356,9 +312,7 @@
             <i class="filled fas fa-star"></i>
           </div>
           <p>
-            سويت حماية مطفية لسياراتي شغل ممتاز واسعار جيدة بالنسبة لباقى
-            الشركات مشكورين على التعامل الراقي وحسن الاستقبال
-          </p>
+            تجربة ناجحة بكل المقاييس، فرق واضح قبل وبعد، وأنصح بالخدمة لمن يهتم بمظهر سيارته </p>
         </div>
       </div>
     </div>
@@ -383,20 +337,22 @@
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      <span class="accordian-numbers">01</span> ما هي المواد المستخدمة في البوليش
+                      <span class="accordian-numbers">01</span> ما هو البوليش ؟
                     </button>
                   </h2>
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      نستخدم منزيرنا و سوناكس مواد المانية </div>
+                      البوليش هو عملية معالجة سطح طلاء السيارة لإزالة الخدوش السطحية، بهتان اللون، وآثار
+                      الغسيل الخاطئ، بهدف
+                      استعادة اللمعان الأصلي للدهان </div>
                   </div>
                 </div>
                 <div class="accordion-item mb-4">
                   <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      <span class="accordian-numbers">02</span> كم يوم تحتاج االسيارة
+                      <span class="accordian-numbers">02</span> كم يوم تحتاج السيارة ؟
                     </button>
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -410,27 +366,30 @@
                   <h2 class="accordion-header" id="headingFour">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                      <span class="accordian-numbers">04</span> المعالجة الذاتية
+                      <span class="accordian-numbers">04</span> ما هي المواد المستخدمة ؟
                     </button>
                   </h2>
                   <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      تحتوي الحماية علي خاصية المعالجة الذاتية عن طريق تعريضها الي الحرارة
-                    </div>
+                      نستخدم منزيرنا و سوناكس مواد المانية </div>
                   </div>
                 </div>
                 <div class="accordion-item mb-4">
                   <h2 class="accordion-header" id="headingFive">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                      <span class="accordian-numbers">05</span> نسبة اللمعة الاضافية
+                      <span class="accordian-numbers">05</span> هل البوليش يزيل الخدوش بالكامل؟
                     </button>
                   </h2>
                   <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      تصل اللمعة الاضافيةالي 70٪
+                      يعتمد ذلك على عمق الخدش
+                      <br>
+                      الخدوش السطحية: تزال بنسبة كبيرة أو كليا
+                      <br>
+                      الخدوش العميقة التي وصلت لطبقة الأساس أو المعدن: لا يزيلها البوليش، ويحتاج الأمر إلى إصلاح دهان
                     </div>
                   </div>
                 </div>
@@ -438,13 +397,15 @@
                   <h2 class="accordion-header" id="headingSix">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                      <span class="accordian-numbers">06</span> هل يوجد سيرفس دوري
+                      <span class="accordian-numbers">06</span> ما الفرق بين البوليش العادي وبوليش المراحل؟
                     </button>
                   </h2>
                   <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      نعم يوجد سيرفس دوري لفحص الحماية كل 6 اشهور مجانا
+                      البوليش العادي: مرحلة واحدة، تحسين شكلي سريع
+                      <br>
+                      بوليش المراحل (2 أو 3 مراحل): معالجة أدق، إزالة عيوب أعمق، ونتيجة تدوم أطول
                     </div>
                   </div>
                 </div>
@@ -488,7 +449,7 @@
               <button class="btn btn--form">ارسل الان </button>
             </form>
           </div>
-          <div class="cta-img-box" role="img" aria-label="child win"></div>
+          <div class="cta-img-box cta-img-box-polish" role="img" aria-label="child win"></div>
         </div>
       </div>
     </section>
