--- a/tint.html
+++ b/tint.html
@@ -78,7 +78,7 @@
     <nav class="main-nav">
       <ul class="main-nav-list">
         <li><a class="main-nav-link" href="#tint-number">درجات العازل</a></li>
-        <li><a class="main-nav-link" href="#services"> انواع العوازل</a></li>
+        <li><a class="main-nav-link" href="#tint-type"> انواع العوازل</a></li>
         <li><a class="main-nav-link" href="#gallery"> معرض الصور</a></li>
         <li><a class="main-nav-link" href="#testimonials"> اراءالعملاء</a></li>
         <li><a class="main-nav-link" href="#faq"> الاسئلةالشائعة</a></li>
@@ -182,7 +182,7 @@
     </div>
     <!-- end tint number -->
     <!-- start ppf-type section -->
-    <section class="ppf-type" id="ppf-type">
+    <section class="tint-type" id="tint-type">
       <div class="center-text">
         <h2 class="heading-secondary">
           تعرف علي انواع العوازل المتوفرة لدينا </h2>
@@ -342,8 +342,8 @@
       <div class="container">
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>عمر السعدون</h3>
-          <span class="title">تويوتا لاندكروزر</span>
+          <h3>نواف المطيري</h3>
+          <span class="title"> نيسان باترول</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -351,12 +351,12 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>مشكورين الاخ بيتر ومبارك خدمة ممتازة و سعر يستحق الخدمة المقدمة</p>
+          <p> يوجد فرق واضح في درجة الحرارة داخل السيارة بعد تركيب العازل </p>
         </div>
         <div class="box">
           <img src="./img/testimonials/female-3.png" alt="avatar-1" />
-          <h3>لطيقة الياسين</h3>
-          <span class="title">رانج روفر</span>
+          <h3> اسيل العنزي</h3>
+          <span class="title"> لكزس</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -364,12 +364,12 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>صراحة اول مرة اجرب شغلكم وباذن الله راح اقترح اسم محلكم لاهلنا</p>
+          <p>لاحظت فرقًا كبيرًا في حرارة السيارة، خصوصًا أثناء الوقوف تحت الشمس </p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-2.png" alt="avatar-1" />
-          <h3>خالد الفيلكاوي</h3>
-          <span class="title">بي ام دابليو</span>
+          <h3> فهد العازمي</h3>
+          <span class="title"> فورد برونكو</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -377,12 +377,12 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>يعطيكم العافية شغل مميز والله يبارك لكم فى حلالكم</p>
+          <p> نتيجة ملموسة، حرارة أقل وحماية أفضل لداخلية السيارة </p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>ابراهيم القحطاني</h3>
-          <span class="title">لكزيس</span>
+          <h3> مبارك العنزي</h3>
+          <span class="title">فورد تريتوري</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -391,14 +391,12 @@
             <i class="filled fas fa-star"></i>
           </div>
           <p>
-            شكرا على حسن التعامل والاستقبال الطيب المكان حيل مرتب مو اول سيارة
-            اعملها عندكم باذن الله اصير زبون دائم
-          </p>
+            الفرق قبل وبعد العازل كبير جداالقيادة أصبحت أكثر راحة خاصة خلال الصيف </p>
         </div>
         <div class="box">
           <img src="./img/testimonials/female-3.png" alt="avatar-1" />
-          <h3>مريم الانبعي</h3>
-          <span class="title">جيلى مانجارو</span>
+          <h3> شيخة القحطاني</h3>
+          <span class="title"> لاندكروزر</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -406,12 +404,12 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>الحلو ان المحل كبير وفية استراحة منفصلة للعوائل</p>
+          <p> اختيار موفق راحة أعلى وحماية حقيقية من حرارة الصيف</p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>اسامة العميري</h3>
-          <span class="title">دودج رام تي ار اكس</span>
+          <h3> زيد العتيبي</h3>
+          <span class="title"> تويوتا برادو</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -420,14 +418,13 @@
             <i class="filled fas fa-star"></i>
           </div>
           <p>
-            قسم الاكسسوارات ممتاز واشتريت شاحن التليفون و دقمة حزام الامان
-            واشتراك للسيارة
+            تعامل احترافي والتزام بالمواعيد العازل الحراري ذو كفاءة عالية ويعكس حرارة الشمس بشكل فعلي
           </p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-1.png" alt="avatar-1" />
-          <h3>ناصر المطيري</h3>
-          <span class="title">جينيسيس</span>
+          <h3>عبدالرحمن العازمي</h3>
+          <span class="title">جي ام سي يوكن</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -435,12 +432,12 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>يا ليت لو تفتحتون فرع فى المنطقة العاشرة</p>
+          <p> خدمة راقية ونتيجة ملموسةالعازل فعّال ضد حرارة الشمس والداخلية أصبحت أبرد بشكل ملحوظ</p>
         </div>
         <div class="box">
           <img src="./img/testimonials/female-3.png" alt="avatar-1" />
-          <h3>مني الدويسان</h3>
-          <span class="title">ديفندر</span>
+          <h3> دلال الحردان</h3>
+          <span class="title">نيسان باترول</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -449,14 +446,12 @@
             <i class="filled fas fa-star"></i>
           </div>
           <p>
-            يعطيكم العافية شغل ممتاز <br />استقبال وتعامل راقي الله يباركلك فى
-            حلالكم
-          </p>
+            شغل ممتاز و استقبال راقي من الموظفين الله يباركلكم في حلالكم </p>
         </div>
         <div class="box">
           <img src="./img/testimonials/male-2.png" alt="avatar-1" />
-          <h3>فهد السهلي</h3>
-          <span class="title">مرسيدس</span>
+          <h3> مبارك العازمي</h3>
+          <span class="title"> تويوتا لاندكروزر</span>
           <div class="rate">
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
@@ -464,10 +459,7 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
           </div>
-          <p>
-            سويت حماية مطفية لسياراتي شغل ممتاز واسعار جيدة بالنسبة لباقى
-            الشركات مشكورين على التعامل الراقي وحسن الاستقبال
-          </p>
+          <p> سيارتي وسيارت عيالي ركبتهم عندكم شغل ممتاز وتعامل راقي </p>
         </div>
       </div>
     </div>
