--- a/paint.html
+++ b/paint.html
@@ -11,6 +11,24 @@
   <meta name="description"
     content="  هافركامب |صبغ سيارات - اصلاح خدوش - اصلاح دعمات - احدث تقنيات لتركيب الالوان - رد علي البارد بدون صبغ " />
   <meta name="author" content="Ahmad M-Nofal">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16636917037"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16636917037');
+  </script>
+
+  <!-- Event snippet for Contact conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-16636851413/56fJCOXMzs0bENXpiP09',
+      'value': 1.0,
+      'currency': 'USD'
+    });
+  </script>
   <!-- Open Graph -->
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
@@ -20,7 +38,7 @@
   <meta property="og:description"
     content="  هافركامب |صبغ سيارات - اصلاح خدوش - اصلاح دعمات - احدث تقنيات لتركيب الالوان - رد علي البارد بدون صبغ " />
   <meta property="og:image" content="https://haverkampkw.com/img/contact/cover.jpeg" />
-  <meta property="og:url" content="https://haverkampkw.com" />
+  <meta property="og:url" content="https://haverkampkw.com/paint.html" />
   <meta property="og:site_name" content="هافركامب">
   <meta name="theme-color" content="#00345c">
   <link rel="canonical" href="https://www.haverkampkw.com/paint.html">
