--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     gtag('config', 'AW-16636917037');
   </script>
 
+  <!-- Event snippet for Contact conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-16636851413/56fJCOXMzs0bENXpiP09',
+      'value': 1.0,
+      'currency': 'USD'
+    });
+  </script>
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ar_AR">
@@ -308,7 +316,7 @@
         <div class="services-box">
           <img src="./img/main_page/swarfsky.webp" alt="اكسسوارات وعطور">
           <div class="services-info">
-            <a href="#" target="_blank">
+            <a href="./accessories.html" target="_blank">
               <h3> اكسسوارات</h3>
             </a>
           </div>
@@ -568,34 +576,9 @@
     <div class="container">
       <div class="box">
         <h3>هافركامب</h3>
-        <!-- <ul class="social">
-                <li>
-                  <a href="tel:51111154" class="phone">
-                    <i class="fa-solid fa-mobile-screen-button fa-2x"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://wa.me/96551111154" target="_blank" class="whatsapp">
-                    <i class="fab fa-whatsapp fa-2x"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.instagram.com/haverkampkw/" target="_blank" class="instagram">
-                    <i class="fab fa-instagram fa-2x"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.snapchat.com/add/haverkampkw" target="_blank" class="snapchat">
-                    <i class="fab fa-snapchat fa-2x"></i>
-                  </a>
-                </li>
-              </ul>
-        -->
         <p class="text"> الوكيل الحصري لحماية هافركامب الالمانية في الشرق الاوسط <br> الوكيل الحصري لحماية كلايف ديزاين
           الكورية بالكويت</p>
-
       </div>
-
       <div class="box">
         <div class="line">
           <i class="fa-solid fa-house fa-2x"></i>
@@ -620,27 +603,7 @@
       جميع الحقوق محفوظة لشركة هافركامب &copy; <span class="year">2027</span>
     </p>
   </div>
-  <!-- <div class="designer">
-          <p class="copyright">Made With &#10084; By a7med206</p>
-          <ul class="social-a7med">
-            <li>
-              <a href="tel:65811402" class="phone">
-                <i class="fa-solid fa-mobile-screen-button"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://wa.me/96565811402" target="_blank" class="whatsapp">
-                <i class="fab fa-whatsapp fa-2x"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/a7med206/" target="_blank" class="instagram">
-                <i class="fab fa-instagram fa-2x"></i>
-              </a>
-            </li>
-          </ul>
 
-        </div> -->
   <!-- End Footer -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"></scrip >
 </body >
