--- a/iron.html
+++ b/iron.html
@@ -10,12 +10,30 @@
   <meta name="description" content="افضل واقوي حماية وعازل حراري بالكويت ، منتج الماني 
  ">
   <meta name="author" content="Ahmad M-Nofal">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16636917037"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16636917037');
+  </script>
+
+  <!-- Event snippet for Contact conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-16636851413/56fJCOXMzs0bENXpiP09',
+      'value': 1.0,
+      'currency': 'USD'
+    });
+  </script>
   <!-- Open Graph -->
   <meta property="og:title" content="haverkamp | هافركامب" />
   <meta property="og:description"
     content="الوكيل الحصري لحمايات هافركامب الالمانية في الشرق الاوسط وحمايات كلايف ديزاين الكورية في الخليج" />
   <meta property="og:image" content="https://example.com/image.jpg" />
-  <meta property="og:url" content="https://haverkampkw.com" />
+  <meta property="og:url" content="https://haverkampkw.com/iron.html" />
   <meta property="og:type" content="website" />
 
   <!-- Schema.org JSON-LD -->
