--- a/polish.html
+++ b/polish.html
@@ -11,7 +11,24 @@
   <meta name="description"
     content="  هافركامب بوليش وتلميع خارجي مواد المانية - اقوي بوليش في الكويت - افضل بوليش في الكويت " />
   <meta name="author" content="Ahmad M-Nofal">
-  <!-- Open Graph -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16636917037"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16636917037');
+  </script>
+
+  <!-- Event snippet for Contact conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-16636851413/56fJCOXMzs0bENXpiP09',
+      'value': 1.0,
+      'currency': 'USD'
+    });
+  </script>
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ar_AR">
@@ -20,7 +37,7 @@
   <meta property="og:description"
     content="  هافركامب بوليش وتلميع خارجي مواد المانية - اقوي بوليش في الكويت - افضل بوليش في الكويت " />
   <meta property="og:image" content="https://haverkampkw.com/img/contact/cover.jpeg" />
-  <meta property="og:url" content="https://haverkampkw.com" />
+  <meta property="og:url" content="https://haverkampkw.com/polish.html" />
   <meta property="og:site_name" content="هافركامب">
   <meta name="theme-color" content="#00345c">
   <link rel="canonical" href="https://www.haverkampkw.com/paint.html">
