--- a/protication.html
+++ b/protication.html
@@ -11,6 +11,24 @@
   <meta name="description"
     content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
   <meta name="author" content="Ahmad M-Nofal">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16636917037"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16636917037');
+  </script>
+
+  <!-- Event snippet for Contact conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-16636851413/56fJCOXMzs0bENXpiP09',
+      'value': 1.0,
+      'currency': 'USD'
+    });
+  </script>
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ar_AR">
@@ -19,7 +37,7 @@
   <meta property="og:description"
     content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
   <meta property="og:image" content="https://haverkampkw.com/img/contact/cover.jpeg" />
-  <meta property="og:url" content="https://haverkampkw.com" />
+  <meta property="og:url" content="https://haverkampkw.com/protication.html" />
   <meta property="og:site_name" content="هافركامب">
   <link rel="canonical" href="https://www.haverkampkw.com/">
   <!-- Schema.org JSON-LD -->
