--- a/tint.html
+++ b/tint.html
@@ -10,6 +10,24 @@
   <meta name="description"
     content=" شركة هافركامب توفر لكم مجموعة متنوعة من افلام العازل الحراري - عازل حراري الماني - عازل حراري امريكي كفالة 5 سنوات">
   <meta name="author" content="Ahmad M-Nofal">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16636917037"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16636917037');
+  </script>
+
+  <!-- Event snippet for Contact conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-16636851413/56fJCOXMzs0bENXpiP09',
+      'value': 1.0,
+      'currency': 'USD'
+    });
+  </script>
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ar_AR">
@@ -18,7 +36,7 @@
   <meta property="og:description"
     content=" هافركامب توفر لكم محموعة متنوعة من افلام العازل الحراري عازل حراري الماني - عازل حراري امريكي - كفالة 5 سنوات  " />
   <meta property="og:image" content="https://haverkampkw.com/img/contact/cover.jpeg" />
-  <meta property="og:url" content="https://haverkampkw.com" />
+  <meta property="og:url" content="https://haverkampkw.com/tint.html" />
   <meta property="og:site_name" content="هافركامب">
   <meta name="theme-color" content="#00345c">
   <link rel="canonical" href="https://www.haverkampkw.com/">
