--- a/wash.html
+++ b/wash.html
@@ -10,6 +10,24 @@
   <meta name="description"
     content=" هافركامب افضل شركة غسيل سيارات بالكويت نقدم خدمة غسيل سيارات احترافية في الكويت تشمل الغسيل الخارجي والداخلي والتنظيف الشامل باستخدام مواد عالية الجودة وآمنة على طلاء السيارة والمقصورة الداخلية. نركز على التفاصيل الدقيقة لنمنح سيارتك نظافة حقيقية تحافظ على قيمتها وتمنحك مظهرًا أنيقًا يدوم.  " />
   <meta name="author" content="Ahmad M-Nofal">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16636917037"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16636917037');
+  </script>
+
+  <!-- Event snippet for Contact conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-16636851413/56fJCOXMzs0bENXpiP09',
+      'value': 1.0,
+      'currency': 'USD'
+    });
+  </script>
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ar_AR">
